--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,23 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.fragment:fragment-ktx:1.3.6'
+
+    // navigation
+    implementation "androidx.navigation:navigation-compose:2.5.0-alpha01"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // okhttp
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+
+    // naver map sdk
+    implementation 'com.naver.maps:map-sdk:3.12.0'
+
+    // 현재 위치
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
 }
