--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.fragment:fragment-ktx:1.3.6'
 
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+
     // navigation
     implementation "androidx.navigation:navigation-compose:2.5.0-alpha01"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
