--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.3.6'
 
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.24.1-alpha"
 
     // navigation
     implementation "androidx.navigation:navigation-compose:2.5.0-alpha01"
