--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.todotracks.tdt">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:name=".kotlin.config.ApplicationClass"
@@ -13,16 +14,16 @@
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.TDT">
-        <activity
-            android:name=".src.splash.SplashActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.TDT.NoActionBar">
+<!--        <activity-->
+<!--            android:name=".src.splash.SplashActivity"-->
+<!--            android:exported="true"-->
+<!--            android:label="@string/app_name"-->
+<!--            android:theme="@style/Theme.TDT.NoActionBar">-->
 
-        </activity>
+<!--        </activity>-->
         <activity
             android:exported="true"
-            android:name=".MainActivity"
+            android:name=".src.splash.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
