--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
 
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.24.1-alpha"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.16.0"
 
     // navigation
     implementation "androidx.navigation:navigation-compose:2.5.0-alpha01"
